<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2018,2019 Hocuri
Copyright (c) 2019 Robin Naumann

This file is part of SuperFreezZ.

SuperFreezZ is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

SuperFreezZ is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with SuperFreezZ.  If not, see <http://www.gnu.org/licenses/>.
--><resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">SuperFreezZ</string>
    <string name="msg_search">Search</string>
    <string name="msg_search_help">Search…</string>
    <string name="share_exception">Unexpected error. Report using…</string>
    <string name="accessibility_service_description">Turning this on lets you automatically freeze apps.
\n
\nAdvantages:
\n• No user interaction: Faster. No need to know how to do it.
\n• Disabled users can use the freeze shortcut (via speech recognition, for example), freezing all apps automatically.
\n
\nSuperFreezZ uses the accessibility service to tap on \"FORCE STOP\", \"OK\", and \"Back\". Retrieval of window content finds these buttons, and observation of actions is needed to know when they appear.
\n
\nSuperFreezZ just uses the accessibility service to tap on "Force Stop", "OK", "Back". "Retrieve window content" is necessary to find these buttons and "Observe your actions" is needed to know when they appear.
\n
\nThe accessibility service can also be used to lock the screen after freezing on newer Android versions.</string>
    <string name="freeze_shortcut_label">Freeze</string>
    <string name="NothingToFreeze">Nothing to freeze</string>
    <string name="undo">Undo</string>
    <string name="icon">Icon</string>
    <string name="freeze_this_app_if_it_has_not_been_used_for_a_longer_time">Freeze this app if it has not been used for
		a longer time.
	</string>
    <string name="always_freeze_this_app">Always freeze this app</string>
    <string name="do_never_freeze_this_app">Do never freeze this app</string>
    <string name="pending_freeze">Pending Freeze</string>
    <string name="frozen">Frozen</string>
    <string name="freeze_off">Freeze off</string>
    <string name="used_recently">Used recently</string>
    <string name="no_apps_pending_freeze">[NO APPS PENDING FREEZE]</string>
    <string name="all_apps">ALL APPS</string>
    <string name="usagestats_access">UsageStats access</string>
    <string name="usatestats_explanation">UsageStats access makes it possible for SuperFreezZ to freeze apps only if you
		did not use them for some time (INTELLIGENT FREEZE).
	</string>
    <string name="enable">Enable</string>
    <string name="usagestats_not_enabled">You did not grant UsageStats access.</string>
    <string name="automate_the_freezing_of_apps">Automate the freezing of apps?</string>
    <string name="accessibility_arguments_yes">For:
\n• Ease of use
\n• Freezing a lot of apps</string>
    <string name="accessibility_arguments_no">You will have to press \"FORCE STOP\", \"OK\" and Back manually to freeze an app.
\nFor:
\n• Slow devices
\n• Security concerns
\n• No registration of SuperFreezZ as an accessibility service</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
	<string name="intro_always_freeze_title">Freeze Mode: ALWAYS FREEZE</string>
    <string name="intro_always_freeze_explanation">There are 3 freeze modes. You can choose one for every app. ALWAYS
		FREEZE will freeze an app in any case.
	</string>
    <string name="intro_never_freeze_title">Freeze Mode: NEVER FREEZE</string>
    <string name="intro_never_freeze_explanation">NEVER FREEZE will - turn off freezing and never freeze an app.
	</string>
    <string name="intro_auto_freeze_title">Freeze Mode: INTELLIGENT</string>
    <string name="intro_auto_freeze_explanation">INTELLIGENT FREEZE will freeze an app only if it has not been used for some
		time (7 days by default). Also, apps from F-Droid will not be frozen.
	</string>
    <string name="freeze_manually">Freeze manually</string>
    <string name="Press_forcestop_ok_back">Freeze an app by pressing \"FORCE STOP\", \"OK\", and then \"Back\".</string>
    <string name="freeze_manually_no">I do not want to have to do this</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->
    <string name="pref_header_appslist">Apps list</string>
    <string-array name="appslist_show_special_titles">
        <item>Launcher</item>
        <item>SuperFreezZ itself</item>
        <item>System apps (the system will quickly defrost them)</item>
    </string-array>
    <string-array name="appslist_show_special_values" translatable="false">
        <item>Launcher</item>
        <item>SuperFreezZ</item>
        <item>Systemapps</item>
    </string-array>
    <string name="pref_title_standard_freeze_mode">Standard freeze mode</string>
    <string-array name="standard_freeze_mode_titles">
        <item>Always freeze</item>
        <item>Never freeze</item>
        <item>Intelligent</item>
    </string-array>
    <string-array name="standard_freeze_mode_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_about">About</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_freezing">Freezing apps</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="appslist_show_special">Show special apps in the list</string>
    <string name="pref_intelligentfreeze_delay">INTELLIGENT: Freeze after… (days)</string>
    <string name="pref_summary_appslist_show_special">The Launcher, SuperFreezZ itself and system apps are hidden by default.</string>
    <string name="create_freeze_shortcut">Create Freeze shortcut</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="pref_header_freezing_summary">Customize how and which apps are frozen</string>
    <string name="pref_header_about_summary">Useful links, send logs</string>
    <string name="pref_header_appslist_summary">Show special apps, standard freeze mode</string>
    <string name="freeze_apps_now">Freeze apps now</string>
    <string name="freeze_on_screen_off_title">Freeze when the screen turns off</string>
    <string name="freeze_on_screen_off_sum">You will need to disable \'Power button instantly locks\' in the device settings</string>
    <string name="problems">Problems</string>
    <string name="links">Links</string>
    <string name="info">Info</string>
    <string name="view_intro_again">View intro again</string>
    <string name="logs_copied">Logs copied to clipboard.</string>
    <string name="share_logs">Share logs using…</string>
    <string name="sf_crashed">SuperFreezZ crashed. Please send a report, if you did not already do it.</string>
    <string name="report">Report an issue, propose a feature, …</string>
    <string name="send_logs">Send logs</string>
    <string name="source_code">Source code</string>
    <string name="license">License</string>
    <string name="credits_and_licenses">Credits and third-party licenses</string>
    <string name="already_frozen">Already frozen</string>
    <string-array name="sortmodes">
        <item>Name</item>
        <item>Freeze state</item>
        <item>Last time used</item>
    </string-array>
    <string name="intro_header_welcome">welcome to</string>
    <string name="intro_header_modes">modes</string>
    <string name="intro_header_automaticfreezing">automatic freezing</string>
    <string name="sort_by">Sort by</string>
    <string name="not_available">Not available</string>
	<string name="fdroid_app_not_pending_freeze">F-Droid app</string>
    <string name="used_recently_and_frozen">Used recently <![CDATA[&]]> frozen</string>
    <string name="pref_intelligentfreeze_freeze_fdroid">INTELLIGENT: Freeze F-Droid apps</string>
    <string name="pref_intelligentfreeze_freeze_fdroid_sum">F-Droid apps usually do not run in the background that much.</string>
	<string name="if_you_like_this_app">If you like this app...</string>
    <string name="plz_help_translating">...Please help translating it!</string>
    <string name="plz_donate">...Please donate!</string>
	<string name="changed_freeze_mode">Changed freeze mode</string>
	<string name="sort_last_time_used_explanation">Least recently used apps first</string>
    <string name="other_apps">Other apps</string>
</resources>