<!--
Copyright (c) 2018,2019 Hocuri

This file is part of SuperFreezZ.

SuperFreezZ is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

SuperFreezZ is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with SuperFreezZ.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
	<SwitchPreference
		android:key="use_accessibility_service"
		android:title="@string/automate_the_freezing_of_apps"
		android:defaultValue="true"/>

	<SwitchPreference
		android:key="freeze_on_screen_off"
		android:title="@string/freeze_on_screen_off_title"
		android:summary="@string/freeze_on_screen_off_sum"
		android:defaultValue="false"
		android:dependency="use_accessibility_service"/>

	<SwitchPreference
		android:key="use_usagestats"
		android:title="@string/usagestats_access"
		android:summary="@string/usatestats_explanation"
		android:defaultValue="true"/>

	<EditTextPreference
		android:key="autofreeze_delay"
		android:title="@string/pref_intelligentfreeze_delay"
		android:defaultValue="7"
		android:inputType="number"
		android:dependency="use_usagestats"/>

	<SwitchPreference
		android:key="autofreeze_freeze_fdroid"
		android:title="@string/pref_intelligentfreeze_freeze_fdroid"
		android:summary="@string/pref_intelligentfreeze_freeze_fdroid_sum"
		android:defaultValue="false"
		android:dependency="use_usagestats"/>


</PreferenceScreen>
