<!--
Copyright (c) 2018,2019 Hocuri

This file is part of SuperFreezZ.

SuperFreezZ is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

SuperFreezZ is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with SuperFreezZ.  If not, see <http://www.gnu.org/licenses/>.
-->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- These settings headers are only used on tablets. -->

	<header
		android:fragment="superfreeze.tool.android.userInterface.settingsActivity.SettingsActivity$AppsListPreferenceFragment"
		android:title="@string/pref_header_appslist"
		android:summary="@string/pref_header_appslist_summary"
		android:icon="@drawable/ic_view_list_black_24dp"/>

	<header
		android:fragment="superfreeze.tool.android.userInterface.settingsActivity.SettingsActivity$FreezingAppsPreferenceFragment"
		android:title="@string/pref_header_freezing"
		android:summary="@string/pref_header_freezing_summary"
		android:icon="@drawable/ic_settings_applications_black_24dp" />

	<header
		android:fragment="superfreeze.tool.android.userInterface.settingsActivity.SettingsActivity$AboutPreferenceFragment"
		android:title="@string/pref_header_about"
		android:summary="@string/pref_header_about_summary"
		android:icon="@drawable/ic_info_black_24dp"/>

</preference-headers>
