<!--
Copyright (c) 2018,2019 Hocuri

This file is part of SuperFreezZ.

SuperFreezZ is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

SuperFreezZ is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with SuperFreezZ.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<MultiSelectListPreference
		android:key="appslist_show_special"
		android:title="@string/appslist_show_special"
		android:entries="@array/appslist_show_special_titles"
		android:entryValues="@array/appslist_show_special_values"
		android:summary="@string/pref_summary_appslist_show_special" />

	<ListPreference
		android:key="standard_freeze_mode"
		android:title="@string/pref_title_standard_freeze_mode"
		android:defaultValue="2"
		android:entries="@array/standard_freeze_mode_titles"
		android:entryValues="@array/standard_freeze_mode_values"
		android:negativeButtonText="@null"
		android:positiveButtonText="@null"/>

</PreferenceScreen>
