<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (c) 2018,2019 Hocuri

This file is part of SuperFreezZ.

SuperFreezZ is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

SuperFreezZ is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with SuperFreezZ.  If not, see <http://www.gnu.org/licenses/>.
-->

<merge xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	tools:showIn="@layout/list_item">


	<ImageView
		android:id="@+id/imageFreezeWhenInactive"
		android:layout_width="40dp"
		android:layout_height="match_parent"
		android:layout_gravity="end|center_vertical"
		android:padding="6dp"
		app:srcCompat="@drawable/symbol_freeze_when_inactive"
		style="@style/myClickable"
		android:contentDescription="@string/freeze_this_app_if_it_has_not_been_used_for_a_longer_time" />

	<ImageView
		android:id="@+id/imageAlwaysFreeze"
		android:layout_width="40dp"
		android:layout_height="match_parent"
		android:layout_gravity="end|center_vertical"
		android:padding="6dp"
		app:srcCompat="@drawable/symbol_always_freeze"
		style="@style/myClickable"
		android:contentDescription="@string/always_freeze_this_app" />

	<ImageView
		android:id="@+id/imageNeverFreeze"
		android:layout_width="40dp"
		android:layout_height="match_parent"
		android:layout_gravity="end|center_vertical"
		android:padding="6dp"
		app:srcCompat="@drawable/symbol_never_freeze"
		style="@style/myClickable"
		android:contentDescription="@string/do_never_freeze_this_app" />


</merge>