<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Hocuri
  ~ Copyright (c) 2019 Robin Naumann
  ~
  ~ This file is part of SuperFreezZ.
  ~
  ~ SuperFreezZ is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SuperFreezZ is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SuperFreezZ.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimary"
	android:paddingBottom="55dp"
	tools:context=".userInterface.intro.IntroFragment">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:background="@color/colorPrimaryDark"
				app:layout_constraintHeight_percent="0.5"
				app:layout_constraintTop_toTopOf="parent">

			</androidx.constraintlayout.widget.ConstraintLayout>
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="22dp">

			<TextView
				android:id="@+id/txv_Welcome3"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/intro_header_automaticfreezing"
				android:textColor="@color/secondary_text_material_dark"
				android:textSize="30sp"
				app:fontFamily="@font/uni_sans_heavy"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ScrollView
				android:layout_width="match_parent"

				android:layout_height="0dp"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				android:orientation="vertical"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/txv_Welcome3"
				app:layout_constraintHeight_max="wrap"
				app:layout_constraintVertical_bias="0.4">

				<!--	<LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>-->
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:orientation="vertical">

					<LinearLayout
						android:id="@+id/accessibilityYes"
						style="@style/myClickable"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@drawable/rounded_corner_top"
						android:orientation="vertical"
						android:paddingLeft="16dp"
						android:paddingTop="10dp"
						android:paddingRight="16dp"
						android:paddingBottom="10dp">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="left"
							android:text="@string/yes"
							android:textColor="@color/text_color_primary"
							android:textSize="25sp" />

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="left"
							android:text="@string/accessibility_arguments_yes"
							android:textColor="@color/text_color_primary"
							android:textSize="16sp" />
					</LinearLayout>


					<LinearLayout
						android:id="@+id/accessibilityNo"
						style="@style/myClickable"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@drawable/rounded_corner_bottom"
						android:orientation="vertical"
						android:paddingLeft="16dp"
						android:paddingTop="10dp"
						android:paddingRight="16dp"
						android:paddingBottom="10dp">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="left"
							android:text="@string/no"
							android:textColor="@color/text_color_primary"
							android:textSize="25sp" />

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="left"
							android:text="@string/accessibility_arguments_no"
							android:textColor="@color/text_color_primary"
							android:textSize="16sp" />
					</LinearLayout>
				</LinearLayout>
			</ScrollView>

		</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>